# TODO

* binary info, hex view as tab and detect .bin, .hex files -> enable this buttons on toolbar, not active otherwise
* seach box sometimes not working -> QWidget init error
* Qt settings -> remember position opened files, path, reopen there, (also) setup open path for dialog to fileexplorer
* allow drag & drop file, dir on both(fileexplorer, textedit) and set up
* set up completer for text
* start to dig into clangd -> indexer


# CHANGES

* added Console, settings widget
* ctrl + mouse wheel increase font size
* find box added as dockwidget -> tabified widget .... later make show as one in menu
* settings window buttons works
* Converter -> small widget with line edit to convert text into different formats(hex, base64 ...)

- apkstudio searchreplace(change to QWidget, insert into console) -> easy made, qhexedit(new stacked widget in some option field ... think later - maybe new start window at first and some switcher between diferent views --> hexview, editor, llvm binary info, assembler view(find some) ) also 