@@ -1,0 +1,11 @@
+#ifndef INDEXER_H
+#define INDEXER_H
+
+
+class Indexer
+{
+public:
+    Indexer();
+};
+
+#endif // INDEXER_H
