@@ -1,0 +1,13 @@
+#ifndef DEBUGGERDOCK_H
+#define DEBUGGERDOCK_H
+
+#include <QDockWidget>
+
+class DebuggerDock : public QDockWidget
+{
+    Q_OBJECT
+public:
+    DebuggerDock();
+};
+
+#endif // DEBUGGERDOCK_H
