@@ -1,0 +1,11 @@
+#ifndef LLDBBRIDGE_H
+#define LLDBBRIDGE_H
+
+
+class lldbBridge
+{
+public:
+    lldbBridge();
+};
+
+#endif // LLDBBRIDGE_H
