@@ -1,0 +1,11 @@
+#ifndef LLVMBRIDGE_H
+#define LLVMBRIDGE_H
+
+
+class llvmBridge
+{
+public:
+    llvmBridge();
+};
+
+#endif // LLVMBRIDGE_H
